--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "SplashWalls",
-  "version": "0.0.1",
+  "version": "1.0",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react-native": "^0.17.0",
-    "react-native-image-progress": "^0.4.0",
-    "react-native-progress": "^2.2.0",
-    "react-native-shake-event-ios": "^1.0.3",
-    "react-native-swiper": "^1.4.3"
+    "react": "15.2.1",
+    "react-native": "0.30.0",
+    "react-native-image-progress": "^0.6.0",
+    "react-native-progress": "^3.0.1",
+    "react-native-swiper": "^1.4.8"
   }
 }
